cleaned up css, solved gap

--- a/css/sesync.css
+++ b/css/sesync.css
@@ -22,6 +22,7 @@
     font-weight: normal;
     font-style: normal;
 }
+
 /* ====== Proxima ===========*/
 @font-face {
     font-family: 'proxima_nova_rgregular';
@@ -66,6 +67,7 @@
     font-weight: normal;
     font-style: normal;
 }
+
 /* ====== Futura ===========*/
 @font-face {
     font-family: 'FuturaStd-Medium';
@@ -97,51 +99,29 @@ html, body{
     background: #2A2E31;
 }
 .logo-row {
-    background: #000 none repeat;
-    padding: 15px;
-    min-height: 100px;
+    background: #000;
+    padding-top: 15px;
+    height: 100px;
 }
-
-.page-header {
-    margin: 0px 0px 0px;
+.logo-row h1 {
+    display: none;
 }
-.page-header h1 {
-    margin-top: 5px;
-    text-transform: uppercase;
-}
-
 .main-body {
-    min-height: 100%;
-    height: 100%;
     background: #fff;
-    margin: 0 auto -115px;
-    padding: 0 0 115px;
+    margin: 0 auto;
+    padding: 0;
 }
-
-/* Medium Devices, Desktops */
-@media only screen and (min-width : 992px) {
-    .contentpage {
-	background: transparent url('../images/desktop-zone-content-bg.png') repeat-y;
-	background-position: center;
-    }
-    .frontpage {
-	background: transparent url('../images/desktop-zone-content-bg-fp.png') repeat-y;
-	background-position: center;
-    }
+.main-body [class^="col-md-"] {
+    padding: 0px;
 }
-
-/* Large Devices, Wide Screens */
-@media only screen and (min-width : 1200px) {
-    .contentpage {
-	background: transparent url('../images/desktop-zone-content-bg-lg.png') repeat-y;
-	background-position: center;
-    }
-    .frontpage {
-	background: transparent url('../images/desktop-zone-content-bg-lg-fp.png') repeat-y;
-	background-position: center;
-    }
+#footer {
+    min-height: 125px;
+    width: 100%;
+    background: #000;
+    font-size: 0.85em;
+    color: #ccc;
+    font-family: "proxima_nova_ltsemibold";
 }
-
 .list-inline {
     margin-left: 0px;
 }
@@ -152,7 +132,6 @@ html, body{
 .menu-links li>a {
     font-family: "proxima_nova_rgbold";
     color: #85e751;
-
 }
 .menu-links li {
     font-family: "proxima_nova_rgbold";
@@ -171,7 +150,6 @@ html, body{
 .menu-links li:hover {
     background: #D4D4D4;
 }
-
 .main-content {
     background: #FFF;
     padding-left: 10px;
@@ -191,13 +169,11 @@ html, body{
     width: 100%;
     border-bottom: 1px solid #dfdfdf;
     padding-top: 8px;
-    
 }
 .sidebar-content a {
     text-decoration: none;
     color: #85e751;
 }
-
 .sidebar-content h1 {
     font-family: "proxima_nova_thextrabold";
     color: #FFF;
@@ -212,28 +188,6 @@ html, body{
     text-transform: uppercase;
     padding-bottom: 15px;
     font-size: 12px;
-}
-
-#wrap { 
-    /*background: #2A2E31;*/
-    min-height: 100%;
-    height: auto !important;
-    /* height: 100%; */
-    /* Negative indent footer by its height */
-    /* margin: 0 auto -150px; */
-    /* Pad bottom by footer height */
-    /* padding: 0 0 150px; */
-}
-
-#footer {
-    /* height: 150px; */
-    position: absolute;
-    bottom:0;
-    width: 100%;
-    background: #000;
-    font-size: 0.85em;
-    color: #CCC;
-    font-family: "proxima_nova_ltsemibold";
 }
 .footer-logo img {
     padding-top: 10px;
@@ -266,30 +220,54 @@ h5, h6 {
     font-size: 1em
 }
 
-/* Scrolling of main content between fixed header and footer */
-@media (min-width:992px) {
-
+/* Medium Devices, Desktops */
+@media only screen and (min-width : 992px) {
+    .contentpage {
+	background: transparent url('../images/desktop-zone-content-bg.png') repeat-y;
+	background-position: center;
+    }
+    .frontpage {
+	background: transparent url('../images/desktop-zone-content-bg-fp.png') repeat-y;
+	background-position: center;
+    }
+    .logo-row h1 {
+    	display: block;
+	text-transform: uppercase;
+    }
+    
+    /* Scrolling of main content between fixed header and footer */
     html, body {
     	height: 100%;
     	overflow: hidden;
-    }
-    
+    }    
     .main-content {
-    	height: calc(100vh - 150px - 115px);
+    	height: calc(100vh - 125px - 100px);
     	overflow-y: hidden;
     }
-
     .main-content:hover {
     	overflow-y: auto;
     }
-
     .sidebar-content {
-    	height: calc(100vh - 150px - 115px);
+    	height: calc(100vh - 125px - 100px);
     	overflow-y: hidden;
     }
-
     .sidebar-content:hover {
     	overflow-y: auto;
     }
+    #footer {
+	position: absolute;
+	bottom:0;
+    }
+}
 
+/* Large Devices, Wide Screens */
+@media only screen and (min-width : 1200px) {
+    .contentpage {
+	background: transparent url('../images/desktop-zone-content-bg-lg.png') repeat-y;
+	background-position: center;
+    }
+    .frontpage {
+	background: transparent url('../images/desktop-zone-content-bg-lg-fp.png') repeat-y;
+	background-position: center;
+    }
 }
